# chargeback-intel-agent

./: .env  .gitignore  Dockerfile  README.md  When an online merchant sells an item.docx  agents.py  blind_eval_sweep.py  deploy.yml  ingestion.py  main.py  orchestrator.py  parse_rulebooks.py  production_audit_trail.jsonl  pyproject.toml  requirements.txt  sample_generator.py  seed_vector_db.py  task-definition.json  test_bench.json  test_s3.py
.github/workflows/: deploy.yml
chargeback-ui/: app.py
mock_s3_bucket/cases/dispute_1/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_1000/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10001/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10004/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10005/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10007/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10008/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10010/: fedex_delivery_receipt.txt  invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10012/: invoice.json  metadata.json
mock_s3_bucket/cases/dispute_10019/: fedex_delivery_receipt.txt  invoice.json  (+1 more)
raw_rulebooks/: parsed_corpus.json
unit_test/: test_customer_agent.py  test_policy_agent.py
(+19772 files in other folders)
