[project]
name = "chargeback-intel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.42",
    "flashrank>=0.2.10",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pinecone>=9.1.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "streamlit>=1.59.1",
]
